@@ -9,7 +9,10 @@ All relevant info is written down in comments inside sources.
 ## Usage
 Checkout and explore in your favorite IDE.
 
-You also can `mvn clean install` the project and then run `java --enable-preview -jar target\JavaDemos-2.0.jar`. But you may miss some important context and information. 
+You also can `mvn clean install` the project and then just run `java --enable-preview --add-modules=jdk.incubator.concurrent -jar target\JavaDemos-2.0.jar`. 
+But you may miss some important context and information without reading the comments in the source code. 
+
+Note that `--enable-preview` and `--add-modules` options are necessary to make the newest Java language features available.
 
 ## Author
 * alois.seckar@atos.net
